src/test/ui/nll/ty-outlives/ty-param-fn.stderr
warning: not reporting region error due to -Znll
  --> $DIR/ty-param-fn.rs:22:5
   |
22 |     x
   |     ^

warning: not reporting region error due to -Znll
  --> $DIR/ty-param-fn.rs:38:5
   |
38 |     x
   |     ^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:22:5
   |
22 |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:38:5
   |
38 |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to 2 previous errors

